# disco-diffusion

./: CREDITS.md  PERFORMANCE.md  README.md  pyproject.toml  shell.nix
samples/: samples(1)_settings.json  samples(2)_settings.json  samples(5)_settings.json  samples(9)_settings.json
src/disco_diffusion/: __init__.py  cli.py  config.py  cutouts.py  download.py  generate.py  losses.py  models.py  noise.py  prompts.py  secondary.py  session.py  tls.py
studio/: README.md  config.toml  pyproject.toml
studio/presets/: 2022-sauce.toml  default.toml  my-preset.toml
studio/src/disco_diffusion_studio/: __init__.py  __main__.py  _ui_build.py  _ui_draw.py  _ui_events.py  app.py  bottom_bar.py  canvas.py  colours.py  controls.py  generation.py  history.py  init_image.py  layout.py  loading.py  models.py  native_dialog.py  paint.py  palette.py  presets.py  recipe.py  reload.py  session_io.py  sidebar.py  signals.py  specs.py  state.py  theme.py  timeline.py  util.py  worker.py
studio/src/disco_diffusion_studio/common/: __init__.py  constants.py  native_dialog.py
studio/src/disco_diffusion_studio/controllers/: __init__.py  generation.py  history.py  models.py  recipe.py  session_io.py
studio/src/disco_diffusion_studio/engine/: __init__.py  worker.py
studio/src/disco_diffusion_studio/paint/: __init__.py  colours.py  paint.py  palette.py
studio/src/disco_diffusion_studio/session/: __init__.py  presets.py  state.py  timeline.py
studio/src/disco_diffusion_studio/ui/: __init__.py  bottom_bar.py  canvas.py  draw.py  events.py  loading.py  sidebar.py  view.py
studio/tests/: conftest.py  test_app.py  test_colours.py  test_init_image.py  test_layout.py  test_loading.py  test_paint.py  test_palette.py  test_presets.py  test_reload.py  test_timeline.py  test_view.py  test_worker.py
tests/: test_config.py  test_pipeline_units.py
