[project]
name = "disco-diffusion-studio"
version = "0.1.0"
description = "Interactive UI for steering Disco Diffusion's sampling loop live by mixing prompts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "disco-diffusion",
    "pygame-ce>=2.5",
    "pygame_gui>=0.6.9",
    "numpy>=1.26",
    "pillow>=10.0",
    "torch>=2.7",
    "torchvision>=0.22",
]

[project.scripts]
disco-studio = "disco_diffusion_studio.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/disco_diffusion_studio"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
]

# This project is a member of the disco-diffusion uv workspace (its parent repo); the
# library is the workspace root, and the PyTorch CUDA index/sources are inherited from it.
[tool.uv.sources]
disco-diffusion = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
files = ["src/disco_diffusion_studio"]
warn_return_any = false
disallow_untyped_calls = false

# pygame / pygame_gui ship no type stubs.
[[tool.mypy.overrides]]
module = ["pygame.*", "pygame_gui.*"]
ignore_missing_imports = true
